fix icon flicker

--- a/src/components/index/introduction.module.scss
+++ b/src/components/index/introduction.module.scss
@@ -28,9 +28,3 @@
 .button:hover {
     transform: translateY(3px);
 }
-
-.icon {
-  display: block;
-  margin: auto;
-  font-size: 50px;
-}
